apps/bsis-app/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bsis-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: staging
    spec:
      containers:
        - name: app
