apps/bsis-app/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsis-app
spec:
  tls:
    - hosts:
        - app-staging.example.com
      secretName: bsis-app-staging-tls
  rules:
    - host: app-staging.example.com
